--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                   <th class="sub-note"><img src="images/promptcartLogo.svg" alt="Pcart Logo"></th>
                   <th class="sub-note"><img src="images/Blinkit.png" alt="p Logo"></th>
                   <th class="sub-note"><img src="images/Jiomart.png" alt="pct Logo"></th>
-                  <th class="sub-note"><img src="images/bigbasket.png" alt="pca Logo"></th>
+                  <th class="sub-note"><img src="images/instamart.png" alt="pca Logo"></th>
                   <th class="sub-noted">Others</th>
               </tr>
           </thead>
